Use Gluon Wave